apps/base/convertx/convertx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: convertx-ingressroute
  namespace: convertx
  annotations:
    gethomepage.dev/href: "https://convertx.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ConvertX"
    gethomepage.dev/description: "File converter"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons@main/png/convertx.png"
spec:
  entryPoints: [websecure, web]
  routes:
    - match: Host(`convertx.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: convertx
          port: 3000
          scheme: http
  tls: {}
